<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclc_mqtt_client</name>
  <version>1.0.0</version>
  <description>RCLC-MQTT Client</description>
  <maintainer email="201840103@email.daelim.ac.kr">reidlo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclc</depend>
  <depend>rclc_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>rclc_parameter</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
